--- a/timer.html
+++ b/timer.html
@@ -115,6 +115,15 @@
                                                                     <div class="image">
                                                                         <img src="/assets/images/root/highlight-subject-primary-content-image-1.png" />
                                                                     </div>
+                                                                    <div class="anchor">
+                                                                        <a href="#">
+                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                                                class="lucide lucide-play h-4 w-4 text-white ml-0.5">
+                                                                                <polygon points="6 3 20 12 6 21 6 3"></polygon>
+                                                                            </svg>
+                                                                        </a>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                             <div class="col-inner">
@@ -150,7 +159,7 @@
                                                                     <div class="progress-caption">
                                                                         <div class="caption">
                                                                             <span>
-                                                                                0%
+                                                                                65%
                                                                             </span>
                                                                         </div>
                                                                     </div>
@@ -179,7 +188,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="button">
-                                                        <a class="btn btn-block btn-default btn-solid grey" href="javascript:void(0);">
+                                                        <a class="btn btn-block btn-default btn-solid grey-super-light" href="javascript:void(0);">
                                                             <span class="wrapper">
                                                                 <span class="icon">
                                                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -210,6 +219,131 @@
                                     <div class="row">
                                         <div class="col-page-inner">
                                             
+                                            <!-- Session Timer - Primary -->
+
+                                            <section class="section session-timer primary">
+                                                <div class="section-wrapper primary">
+
+                                                    <!-- Content Section -->
+
+                                                    <div class="session-timer-content">
+                                                        <div class="content-tag">
+                                                            <div class="tag">
+                                                                <span>
+                                                                    Tempo de Foco
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="content-timer">
+                                                            <div class="timer-text">
+                                                                <div class="number">
+                                                                    <span id="timer">
+                                                                        25:00
+                                                                    </span>
+                                                                </div>
+                                                                <div class="subtitle">
+                                                                    <h4 class="text-subtitle">
+                                                                        Tempo de foco
+                                                                    </h4>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="content-button">
+                                                            <div class="button d-none" id="btnPause">
+                                                                <a class="btn btn-block btn-default btn-solid primary" href="javascript:void(0);">
+                                                                    <span class="wrapper">
+                                                                        <span class="icon">
+                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                                <rect x="14" y="4" width="4" height="16" rx="1"></rect>
+                                                                                <rect x="6" y="4" width="4" height="16" rx="1"></rect>
+                                                                            </svg>
+                                                                        </span>
+                                                                        <span class="text">
+                                                                            Pausar
+                                                                        </span>
+                                                                    </span>
+                                                                </a>
+                                                            </div>
+                                                            <div class="button" id="btnStart">
+                                                                <a class="btn btn-block btn-default btn-solid primary" href="javascript:void(0);">
+                                                                    <span class="wrapper">
+                                                                        <span class="icon">
+                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                                <polygon points="6 3 20 12 6 21 6 3"></polygon>
+                                                                            </svg>
+                                                                        </span>
+                                                                        <span class="text">
+                                                                            Iniciar
+                                                                        </span>
+                                                                    </span>
+                                                                </a>
+                                                            </div>
+                                                            <div class="button" id="btnReset">
+                                                                <a class="btn btn-block btn-default btn-solid grey" href="javascript:void(0);">
+                                                                    <span class="wrapper">
+                                                                        <span class="icon">
+                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                                <path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"></path>
+                                                                                <path d="M3 3v5h5"></path>
+                                                                            </svg>
+                                                                        </span>
+                                                                        <span class="text">
+                                                                            Reset
+                                                                        </span>
+                                                                    </span>
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                        <div class="content-info">
+                                                            <div class="row">
+                                                                <div class="col-info-outer">
+                                                                    <div class="row">
+                                                                        <div class="col-info-inner">
+                                                                            <div class="info-wrapper primary">
+                                                                                <div class="info-value">
+                                                                                    <div class="value">
+                                                                                        <span class="color-blue">
+                                                                                            0
+                                                                                        </span>
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="info-text">
+                                                                                    <div class="subtitle">
+                                                                                        <h4 class="text-subtitle">
+                                                                                            Pomodoros
+                                                                                        </h4>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-info-inner">
+                                                                            <div class="info-wrapper primary">
+                                                                                <div class="info-value">
+                                                                                    <div class="value">
+                                                                                        <span class="color-green">
+                                                                                            0
+                                                                                        </span>
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="info-text">
+                                                                                    <div class="subtitle">
+                                                                                        <h4 class="text-subtitle">
+                                                                                            Minutos
+                                                                                        </h4>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </section>
                                         </div>
                                         <div class="col-page-inner">
 
@@ -403,5 +537,71 @@
 
     <script src="assets/javascript/custom-select2.js"></script>
     <script src="assets/javascript/custom-javascript.js"></script>
+    
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const timerElement = document.getElementById('timer');
+            const btnStart = document.getElementById('btnStart');
+            const btnPause = document.getElementById('btnPause');
+            const btnReset = document.getElementById('btnReset'); 
+
+            let duration = 25 * 60;
+            let timerInterval = null;
+
+            function updateTimerDisplay() {
+                const minutes = Math.floor(duration / 60);
+                const seconds = duration % 60;
+                timerElement.textContent =
+                    `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+            }
+
+            function startTimer() {
+                if (!timerInterval) {
+                    timerInterval = setInterval(() => {
+                        if (duration > 0) {
+                            duration--;
+                            updateTimerDisplay();
+                        } else {
+                            clearInterval(timerInterval);
+                            timerInterval = null;
+                            alert("Time's up!");
+                        }
+                    }, 1000);
+                }
+            }
+
+            function pauseTimer() {
+                clearInterval(timerInterval);
+                timerInterval = null;
+            }
+
+            function resetTimer() {
+                clearInterval(timerInterval);
+                timerInterval = null;
+                duration = 25 * 60;
+                updateTimerDisplay();
+                btnPause.classList.add('d-none');
+                btnStart.classList.remove('d-none');
+            }
+
+            updateTimerDisplay();
+
+            btnStart.addEventListener("click", () => {
+                startTimer();
+                btnStart.classList.add('d-none');
+                btnPause.classList.remove('d-none');
+            });
+
+            btnPause.addEventListener("click", () => {
+                pauseTimer();
+                btnPause.classList.add('d-none');
+                btnStart.classList.remove('d-none');
+            });
+
+            btnReset.addEventListener("click", () => {
+                resetTimer();
+            });
+        });
+    </script>
 </body>
 </html>
